; ModuleID = '/home/carl/AnghaBench/ios-webkit-debug-proxy/examples/extr_wi_client.c_recv_plist.c'
source_filename = "/home/carl/AnghaBench/ios-webkit-debug-proxy/examples/extr_wi_client.c_recv_plist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WI_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @recv_plist(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i8* null, i8** %5, align 8
  store i32 0, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @plist_to_xml(i32 %7, i8** %5, i32* %6)
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @puts(i8* %9)
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @free(i8* %11)
  %13 = load i32, i32* @WI_SUCCESS, align 4
  ret i32 %13
}

declare dso_local i32 @plist_to_xml(i32, i8**, i32*) #1

declare dso_local i32 @puts(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
